...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/setup_buffer_size" />

            <Spinner
                android:id="@+id/buffer_size_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/setup_space" />
...
